# 3d_gpr_workspace

./: Cargo.toml  installation.txt  profile.bat
cli/: Cargo.toml
cli/src/: main.rs
extract_high_amplitudes/: Cargo.toml  profile.bat
extract_high_amplitudes/src/: main.rs
extractor_egui/: Cargo.toml
extractor_egui/src/: main.rs
profile_amplitude_data/: Cargo.toml
profile_amplitude_data/src/: main.rs
shared/: Cargo.toml
shared/src/: amplitude_data.rs  clustering.rs  core.rs  lib.rs  plot.rs  position_data.rs  trace.rs
viewer_slint/: Cargo.toml
viewer_slint/src/: lib.rs  main.rs  plot_slint.rs
viewer_slint/ui/: app-window.slint
