[package]
name = "extractor_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
rfd = "0.15.4"
clap = { version = "4.5.41", features = ["derive"] }
csv = "1.3.1"
geo = "0.30.0"
plotters = "0.3.7"
regex = "1.11.1"
serde = "1.0.219"
wkt = "0.14.0"
anyhow = "1.0.98"
serde_json = "1.0.142"
subprocess = "0.2.9"
